--- a/figures/07_model-selection.Rmd
+++ b/figures/07_model-selection.Rmd
@@ -13,7 +13,7 @@ source("../scripts/99_utils.R")
 ```{r 07_model_selection, fig.height=3, echo=FALSE}
 
 # setwd("figures")
-ids <- test <- readRDS("../data/dt.rds") %>%
+ids <- readRDS("../data/dt.rds") %>%
   group_by(hu4_zoneid) %>% 
   tally()
 
