--- a/figures/09_stream_buffer.Rmd
+++ b/figures/09_stream_buffer.Rmd
@@ -14,24 +14,28 @@ source("../scripts/99_utils.R")
 dt <- readRDS("../data/dt.rds") %>%
   mutate(diff = stream_cultivated_crops - ag_pct, 
          category = cut(diff, breaks = c(Inf, 3, -65, -Inf))) %>%
-  drop_na(diff)
+  drop_na(diff) %>%
+  dplyr::select(lagoslakeid, ag_pct, stream_cultivated_crops, 
+                diff, category)
+
+# llid 6201 as a low stream ag
+# llid 7026 as a high stream ag
+llids <- c("6201", "7026")
 
 ggplot(data = dt) +
   geom_point(aes(x = ag_pct, y = stream_cultivated_crops, color = category)) +
   geom_abline(aes(slope = 1, intercept = 3)) +
   geom_abline(aes(slope = 1, intercept = -65)) +
+  ggrepel::geom_text_repel(data = dplyr::filter(dt, lagoslakeid %in% llids), 
+            aes(x = ag_pct, y = stream_cultivated_crops, label = lagoslakeid)) + 
   theme(legend.position = 0) +
   ylab("Stream buffer Ag (%)") + xlab("IWS Ag (%)") +
   xlim(c(40, 100)) + ylim(c(0, 100))
 ```
 
 ```{r satellite, echo=FALSE}
-# 
 # res_pnt  <- query_gis("LAGOS_NE_All_Lakes_4ha_POINTS", "lagoslakeid", 
 #                       dplyr::filter(dt, diff > 0)$lagoslakeid)
-res_iws  <- query_gis("IWS", "lagoslakeid", 
-                      dplyr::filter(dt, diff > 3)$lagoslakeid)
-
 # ggplot() + 
 #   geom_sf(data = state_sf()) +
 #   geom_sf(data = res_pnt)
@@ -39,8 +43,9 @@ res_iws  <- query_gis("IWS", "lagoslakeid",
 library(curl)
 library(glue)
 library(slippymath)
-library(raster)
 library(rgdal)
+
+res_iws  <- query_gis("IWS", "lagoslakeid", llids)
 
 get_image <- function(outpath, iws){
   tile_grid <- bbox_to_tile_grid(st_bbox(
@@ -65,81 +70,54 @@ get_image <- function(outpath, iws){
   return(raster_out)
 }
 
-outpaths     <- paste0("../data/mapbox/", res_iws$lagoslakeid, ".tif")
+outpaths     <- paste0("../data/mapbox/", llids, ".tif")
 images       <- lapply(seq_along(outpaths), function(i) 
   get_if_not_exists(get_image, outpaths[i], raster::brick, iws = res_iws[i,]))
-  
-iws_sized    <- which(abs(res_iws$IWSAreaHa - median(res_iws$IWSAreaHa)) < 1000)
-images_sized <- images[iws_sized]
 
 get_streams <- function(destfile){
-  res <- lapply(iws_sized, function(x) 
+  res <- lapply(seq_along(llids), function(x) 
             nhdR::nhd_plus_query(
               poly = res_iws[x,], dsn = "NHDFlowLine")$sp$NHDFlowLine)
   saveRDS(res, destfile)
   return(res)
 }
 
+# unlink("../data/nhd/res_streams.rds")
 res_streams <- get_if_not_exists(get_streams, "../data/nhd/res_streams.rds")
 
-# m <- viewRGB(r) + 
-#   mapview(res_streams[[1]]) + 
-#   mapview(s, alpha.regions = 0, color = "red")
-# 
-# mapshot(m, file = paste0(getwd(), "/map.png"))
-# extent(r); st_bbox(s)
-
-i          <- 7
-s          <- res_iws[iws_sized[i],]
-r_raw      <- images_sized[[i]]
-r          <- projectRaster(r_raw, crs = as.character(st_crs(s))[2])
-
-tab        <- as.data.frame(r, xy = TRUE)
-names(tab) <- c("x", "y", "red", "green", "blue")
-tab$red   <- scales::rescale(tab$red, to = c(0, 255))
-tab$blue  <- scales::rescale(tab$blue, to = c(0, 255))
-tab$green <- scales::rescale(tab$green, to = c(0, 255))
-tab          <- tab[complete.cases(tab),]
-tab$hex      <- rgb(tab$red, tab$green, tab$blue, maxColorValue = 255)
-
-ggplot() + 
-  geom_raster(data = tab, aes(x, y, fill = I(hex))) +
-  geom_sf(data = res_iws[iws_sized[i],], alpha = 0, color = "red") +
-  geom_sf(data = res_streams[[i]], color = "cyan") +
-  coord_sf(datum = NA) +
-  theme_void()
-
-
-outpaths     <- paste0("../data/mapbox/", 6201, ".tif") # good sized but low stream ag
-iws_temp     <- query_gis("IWS", "lagoslakeid", 6201)
-# unlink("../data/mapbox/6201.tif")
-images       <- lapply(seq_along(outpaths), function(i) 
-  get_if_not_exists(get_image, outpaths[i], raster::brick, iws = iws_temp))
-
-get_streams <- function(destfile){
-  res <- lapply(iws_sized, function(x) 
-            nhdR::nhd_plus_query(
-              poly = iws_temp, dsn = "NHDFlowLine")$sp$NHDFlowLine)
-  saveRDS(res, destfile)
-  return(res)
+prep_ggplot_raster <- function(r, iws){
+  r_raw <- r
+  r     <- projectRaster(r_raw, 
+                         crs = as.character(st_crs(iws))[2])
+  tab        <- as.data.frame(r, xy = TRUE)
+  names(tab) <- c("x", "y", "red", "green", "blue")
+  tab$red   <- scales::rescale(tab$red, to = c(0, 255))
+  tab$blue  <- scales::rescale(tab$blue, to = c(0, 255))
+  tab$green <- scales::rescale(tab$green, to = c(0, 255))
+  tab          <- tab[complete.cases(tab),]
+  tab$hex      <- rgb(tab$red, tab$green, tab$blue, maxColorValue = 255)
+  tab
 }
 
-streams_temp <- get_if_not_exists(get_streams, "../data/nhd/temp_streams.rds")
-r_raw      <- images[[1]]
-r          <- projectRaster(r_raw, crs = as.character(st_crs(s))[2])
-
-tab        <- as.data.frame(r, xy = TRUE)
-names(tab) <- c("x", "y", "red", "green", "blue")
-tab$red   <- scales::rescale(tab$red, to = c(0, 255))
-tab$blue  <- scales::rescale(tab$blue, to = c(0, 255))
-tab$green <- scales::rescale(tab$green, to = c(0, 255))
-tab          <- tab[complete.cases(tab),]
-tab$hex      <- rgb(tab$red, tab$green, tab$blue, maxColorValue = 255)
-
-ggplot() + 
-  geom_raster(data = tab, aes(x, y, fill = I(hex))) +
-  geom_sf(data = iws_temp, alpha = 0, color = "red") +
-  geom_sf(data = streams_temp[[1]], color = "cyan") +
+i <- 1
+gg_low_ag <- ggplot() + 
+  geom_raster(data = prep_ggplot_raster(images[[i]], res_iws[i,]), 
+              aes(x, y, fill = I(hex))) +
+  geom_sf(data = res_iws[i,], alpha = 0, color = "red") +
+  geom_sf(data = res_streams[[i]], color = "cyan") +
   coord_sf(datum = NA) +
-  theme_void()
+  theme_void() +
+  ggtitle(llids[i])
+
+i <- 2
+gg_hi_ag <- ggplot() + 
+  geom_raster(data = prep_ggplot_raster(images[[i]], res_iws[i,]), 
+              aes(x, y, fill = I(hex))) +
+  geom_sf(data = res_iws[i,], alpha = 0, color = "red") +
+  geom_sf(data = res_streams[[i]], color = "cyan") +
+  coord_sf(datum = NA) +
+  theme_void() +
+  ggtitle(llids[i])
+
+cowplot::plot_grid(gg_low_ag, gg_hi_ag)
 ```
