--- a/figures/08_exploratory_dotplot.Rmd
+++ b/figures/08_exploratory_dotplot.Rmd
@@ -72,20 +72,33 @@ pheatmap::pheatmap(
 # ---- dotplot ----
 
 prep_dotplot <- function(x, col_name){
-  dplyr::select(x, UQ(rlang::sym(col_name))) %>% 
+  pred_key <- read.csv("../data/predictor_key.csv", stringsAsFactors = FALSE)
+  res      <- dplyr::select(x, UQ(rlang::sym(col_name))) %>%
+    dplyr::mutate(var = row.names(x)) %>%
+    dplyr::left_join(pred_key, by = "var") %>%
     dplyr::mutate(var = factor(row.names(x), 
-                            levels = rev(row.names(x)))) %>%
+                            levels = rev(row.names(x))), 
+                  category = factor(category, 
+                                    levels = c("lake", "nutrient_sources",
+                                               "nutrient_proxies",
+                                               "transport_capacity"))) %>%
     dplyr::filter(!(var %in% c("tp", "tn")))
+  res
 }
 
 plot_opts <- theme(axis.title.y = element_blank(), 
-                   axis.text = element_text(size = 8))
+                   axis.text = element_text(size = 8), 
+                   legend.position = 0)
+
+# show_col(brewer_pal("div", "Set1")(4))                   
 plot_grid(
   ggplot(data = prep_dotplot(dt_tp, "tp")) + 
-    geom_point(aes(x = tp, y = var)) + 
+    geom_point(aes(x = tp, y = var, color = category)) + 
+    scale_color_brewer(palette = "Set1") +
     plot_opts, 
   ggplot(data = prep_dotplot(dt_tn, "tn")) + 
-    geom_point(aes(x = tn, y = var)) +
+    geom_point(aes(x = tn, y = var, color = category)) +
+    scale_color_brewer(palette = "Set1") +
     plot_opts
 )
  
