--- a/figures/01_county_extent.Rmd
+++ b/figures/01_county_extent.Rmd
@@ -6,30 +6,30 @@ header-includes:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.height = 5)
+# setwd("figures")
+source("../scripts/99_utils.R")
 ```
 
 ```{r lagos_setup, echo=FALSE, message=FALSE, eval=TRUE, warning=FALSE}
-# setwd("_episodes_rmd")
-library(vapour)
-library(LAGOSNE)
-library(magrittr)
-library(dplyr)
-library(lme4)
-library(sf)
-library(units)
-library(merTools)
-library(ggplot2)
-library(cowplot)
-library(ggridges)
-library(tidyr)
-library(ggExtra)
+# library(LAGOSNE)
+# library(magrittr)
+# library(dplyr)
+# library(lme4)
+# library(sf)
+# library(units)
+# library(merTools)
+# library(ggplot2)
+# library(cowplot)
+# library(ggridges)
+# library(tidyr)
+# library(ggExtra)
 
-ep <- readRDS("../data/ep.rds")
-gdb_path <- path.expand("~/.local/share/LAGOS-GIS/lagos-ne_gis.gpkg")
+ep         <- readRDS("../data/ep.rds")
+gdb_path   <- path.expand("~/.local/share/LAGOS-GIS/lagos-ne_gis.gpkg")
 # st_layers(gdb_path)
 layer_name <- "COUNTY"
-county <- st_read(gdb_path, layer_name, quiet = TRUE)
-states <- st_as_sf(maps::map("state", fill = TRUE, plot = FALSE))
+county     <- st_read(gdb_path, layer_name, quiet = TRUE)
+states     <- st_as_sf(maps::map("state", fill = TRUE, plot = FALSE))
 
 pull_ag_polygons <- function(hi_ag_iws, county){
   layer_name <- "IWS"
@@ -129,4 +129,66 @@ ggplot() +
 # mapview::mapview(hi_ag_iws_w_ep$county, zcol = "n_iws")
 
 # cat(paste0(nrow(ep), " total lakes"))
+```
+
+```{r tptn_maps, echo=FALSE}
+ep         <- readRDS("../data/ep.rds")
+
+mround <- function(x, base){
+        base * round(x / base)
+} 
+
+q_breaks <- function(x, var_name){
+  # x <- ep
+  # var_name <- "tn"
+  qs              <- c(mround(quantile(as.numeric(as.data.frame(x[,var_name])[,1]), na.rm = TRUE), 5))
+  labels          <- as.character(qs)
+  res             <- cut(as.numeric(as.data.frame(x[,var_name])[,1]), 
+                         breaks = c(qs, Inf), 
+                         labels = as.character(qs), 
+                         include.lowest = TRUE)
+  
+  levels(res)[1]  <- paste0("> ", levels(res)[1])
+  levels(res)[length(levels(res))] <- 
+    paste0("> ", levels(res)[length(levels(res))])
+  res
+}
+
+plot_opts <- theme_void() + 
+  theme(title = element_text(size = 10), 
+        # legend.position = "bottom", 
+        panel.border = element_rect(colour = "black", fill = NA, size=1), 
+        legend.spacing.x = unit(0.000001, "cm"), 
+        legend.direction = "horizontal", 
+        legend.position = "bottom", 
+        legend.justification = "left")
+
+ep$plot_breaks <- q_breaks(ep, "tp")
+
+gg_tp <- ggplot() +
+  geom_sf(data = state_intersects) +
+  geom_sf(data = dplyr::filter(coordinatize(ep), !is.na(tp)), 
+          aes(color = plot_breaks), show.legend = "point", size = 0.7) +
+  scale_color_viridis_d() +
+  labs(color = "tp") +
+  coord_sf(datum = NA) +
+  plot_opts
+  
+ep$plot_breaks <- q_breaks(ep, "tn")
+
+gg_tn <- ggplot() +
+  geom_sf(data = state_intersects) +
+  geom_sf(data = dplyr::filter(coordinatize(ep), !is.na(tn)), 
+          aes(color = plot_breaks), show.legend = "point", size = 0.7) +
+  scale_color_viridis_d() +
+  labs(color = "tn") +
+  coord_sf(datum = NA) +
+  guides(color = guide_legend(nrow = 1)) +
+  plot_opts
+
+# View(ep[,c("tn", "plot_breaks")])
+
+plot_grid(gg_tp, 
+          ggplot() + geom_blank(), gg_tn,
+          nrow = 1, rel_widths = c(1, 0.1, 1))
 ```
